--- a/src/.openscad_docsgen_rc
+++ b/src/.openscad_docsgen_rc
@@ -1,27 +1,25 @@
-#DocsDirectory: wiki/
 DocsDirectory: ../wiki
 TargetProfile: githubwiki
-#TargetProfile: wiki
-ProjectName: Kalpana Archi Openscad Library
+ProjectName: Nervi Architecture Openscad Library
 GenerateDocs: Files, TOC, Index, Topics, CheatSheet, Sidebar
 SidebarHeader:
   ## Indices
   .
-  Kalpana Archi list of module files : 
+  Nervi list of module files : 
   .
 SidebarMiddle:
   [Tutorials](Tutorials)
 DefineHeader(BulletList): Side Effects
 DefineHeader(Table;Headers=Anchor&nbsp;Name|Position): Extra Anchors
-PrioritizeFiles:
-  project.scad
-  spaces.scad
-  stairs.scad
-DefineHeader(BulletList): Side Effects
 DefineHeader(Table;Headers=Anchor Name|Position): Named Anchors
 DefineHeader(Table;Headers=Anchor Type|What it is): Anchor Types
 DefineHeader(Table;Headers=Name|Definition): Terminology
 DefineHeader(Text): Returns
-DefineHeader(Text): Context Variables
+DefineHeader(BulletList): Context Variables Old
+DefineHeader(Table;Headers=Variables|Definition): Context Variables
 DefineHeader(BulletList): Requirements
+PrioritizeFiles:
+  project.scad
+  spaces.scad
+  stairs.scad
 
